--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,54 @@
 	<meta charset="UTF-8">
 	<title>Stock Simulator</title>
 	<link rel="stylesheet" href="https://use.typekit.net/oad3efw.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 
 	{{!-- <script src="assets/moment.js"></script>	 --}}
 </head>
 
 <body>
+
+	    <div class="logo-container">
+        <h3 class="logo">Pic<span class="orange-text">ki</span></h3>
+    </div>
+    <div class="nav-expand">
+        <svg class="nav-burger" style="width:24px;height:24px" viewBox="0 0 24 24">
+            <path fill="#e1e1e1" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+        </svg>
+    </div>
+    <div class="nav-container">
+        <nav class="nav">
+            <a href="#skills" class="nav-item">How It Works</a>
+            <a href="#contact" class="nav-item">Contact</a>
+        </nav>
+    </div>
+    <div class="waves">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="svg-wave" id="wave1">
+            <filter id="dropshadow" height="130%">
+                <feGaussianBlur in="SourceAlpha" stdDeviation="8" /> <!-- stdDeviation is how much to blur -->
+                <feOffset dx="0" dy="2" result="offsetblur" /> <!-- how much to offset -->
+                <feComponentTransfer>
+                    <feFuncA type="linear" slope="0.2" /> <!-- slope is the opacity of the shadow -->
+                </feComponentTransfer>
+                <feMerge>
+                    <feMergeNode /> <!-- this contains the offset blurred image -->
+                    <feMergeNode in="SourceGraphic" /> <!-- this contains the element that the filter is applied to -->
+                </feMerge>
+            </filter>
+            <path fill="#ff6034" fill-opacity=".6"
+                d="M0,256L40,266.7C80,277,160,299,240,272C320,245,400,171,480,117.3C560,64,640,32,720,58.7C800,85,880,171,960,176C1040,181,1120,107,1200,106.7C1280,107,1360,181,1400,218.7L1440,256L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
+            </path>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="svg-wave" id="wave2">
+            <path fill="#ff6034" fill-opacity=".825" style="filter:url(#dropshadow)"
+                d="M0,128L48,133.3C96,139,192,149,288,138.7C384,128,480,96,576,80C672,64,768,64,864,58.7C960,53,1056,43,1152,48C1248,53,1344,75,1392,85.3L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+            </path>
+        </svg>
+    </div>
 	{{{ body }}}
 
 	<script src="https://kit.fontawesome.com/77faf95db4.js"></script>
